fix merchant res calendar visibility

--- a/app/webroot/css/generic.css
+++ b/app/webroot/css/generic.css
@@ -1206,6 +1206,10 @@ float: right;
 .calendar_wrap{
 	visibility:hidden;
 }
+
+.merchant_reservations .calendar_wrap{
+	visibility:visible;
+}
 .loader{
     background: url("../img/site/ajax-loader.gif") no-repeat scroll 0 0 transparent;
     display:none;
